clipboard adde and showing

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
                 <h2 class="text-2xl font-bold text-start">জাতীয় জরুরি সেবা</h2>
                 <p id="name-national-emer" class="text-start text-xl">National Emergency Service</p>
                 <p id="call-emer" class="text-start text-2xl font-bold">999</p>
-                <button class="bg-gray-100 text-gray-600 w-3/11 py-1 rounded-2xl border-none text-lg">সার্বজনীন</button>
+                <button class="bg-gray-100 text-gray-600 w-3/11 p-1 rounded-2xl border-none text-lg">সার্বজনীন</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-national-emer-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
                     <button id="btn-national-emer"
-                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-transform duration-2000"><i
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -97,11 +97,12 @@
                 <button class="bg-gray-100 text-gray-600 w-2/10 py-1 rounded-2xl border-none text-lg">পুলিশ</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-police-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-police" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-police"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -121,11 +122,12 @@
                 <button class="bg-gray-100 text-gray-600 w-1/5 py-1 rounded-2xl border-none text-lg">ফায়ার</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-fire-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-fire" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-fire"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -162,11 +164,12 @@
                 <button class="bg-gray-100 text-gray-600 w-1/5 py-1 rounded-2xl border-none text-lg">স্বাস্থ্য</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-ambulance-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-ambulance" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-ambulance"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -185,11 +188,12 @@
                 <button class="bg-gray-100 text-gray-600 w-3/12 py-1 rounded-2xl border-none text-lg">সহায়তা</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-women-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-women" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-women"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -209,11 +213,12 @@
                 <button class="bg-gray-100 text-gray-600 w-2/8 py-1 rounded-2xl border-none text-lg">সরকারি</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-anti-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-anti" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-anti"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -233,11 +238,12 @@
                 <button class="bg-gray-100 text-gray-600 w-1/5 py-1 rounded-2xl border-none text-lg">বিদ্যুৎ</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-ele-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-ele" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-ele"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -256,11 +262,12 @@
                 <button class="bg-gray-100 text-gray-600 w-2/8 py-1 rounded-2xl border-none text-lg">এনজিও</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-brac-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-brac" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-brac"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
@@ -280,11 +287,12 @@
                 <button class="bg-gray-100 text-gray-600 w-3/11 py-1 rounded-2xl border-none text-lg">পরিবহন</button>
                 <div class="flex justify-between gap-4 py-2">
                     <button id="btn-rail-copy"
-                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300"><i
+                        class="bg-white text-gray-600 h-10 w-full rounded-lg border border-gray-300 transition-all duration-300 hover:bg-gray-200"><i
                             class="fa-regular fa-copy"></i>
                         Copy
                     </button>
-                    <button id="btn-rail" class="bg-[#00A63E] text-white h-10 w-full rounded-lg"><i
+                    <button id="btn-rail"
+                        class="bg-[#00A63E] text-white h-10 w-full rounded-lg transition-all duration-300 hover:bg-green-400"><i
                             class="fa-solid fa-phone"></i>
                         Call
                     </button>
