--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">দুদক</h2>
-                <p id="name-anti" class="text-start text-xl">Anti-Corruption</p>
+                <p id="name-anti" class="text-start text-xl">Anti-Corruption Commission</p>
                 <p id="call-anti" class="text-start text-2xl font-bold">106</p>
                 <button class="bg-gray-100 text-gray-600 w-2/8 py-1 rounded-2xl border-none text-lg">সরকারি</button>
                 <div class="flex justify-between gap-4 py-2">
@@ -256,8 +256,8 @@
                     </div>
                     <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
-                <h2 class="text-2xl font-bold text-start">ব্র্যাক </h2>
-                <p id="name-brac" class="text-start text-xl">Brac</p>
+                <h2 class="text-2xl font-bold text-start">ব্র্যাক</h2>
+                <p id="name-brac" class="text-start text-xl">BRAC</p>
                 <p id="call-brac" class="text-start text-2xl font-bold">16445</p>
                 <button class="bg-gray-100 text-gray-600 w-2/8 py-1 rounded-2xl border-none text-lg">এনজিও</button>
                 <div class="flex justify-between gap-4 py-2">
