--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section class="w-full">
-        <div class="max-w-[1800px] mx-auto flex justify-between items-center px-6 py-4">
+        <div class="max-w-[1800px] mx-auto flex justify-between items-center px-5 py-4">
             <!-- navbar -->
             <div class="flex items-center gap-3">
                 <img src="./assets/logo.png" class="h-[60px]" alt="">
@@ -23,18 +23,18 @@
                 </h1>
             </div>
             <div class="flex flex-wrap justify-center md:justify-end items-center gap-4 md:gap-6">
-                <div class="px-4 py-2 min-w-[100px] rounded-full bg-[#F5FFF6] shadow-lg flex justify-center 
-                    items-center text-white text-sm md:text-lg font-semibold border border-gray-200 gap-2">
+                <div class="px-4 py-2 min-w-[110px] rounded-full bg-[#F5FFF6] shadow-xl flex justify-center 
+                    items-center text-white text-sm md:text-lg font-semibold border-none gap-2">
                     <h2 class="font-bold text-black text-xl"><span id="heart-score-board">0</span></h2><img
                         src="./assets/heart.png" class="max-h-[35px]" alt="">
                 </div>
                 <div
-                    class="px-4 py-2 min-w-[100px] rounded-full bg-[#F5FFF6] shadow-lg flex justify-center items-center text-white text-lg font-semibold border border-gray-200 gap-3">
+                    class="px-4 py-2 min-w-[110px] rounded-full bg-[#F5FFF6] shadow-xl flex justify-center items-center text-white text-lg font-semibold border-none gap-3">
                     <h2 class="font-bold text-black text-xl"><span id="icon-score-board">100</span></h2>
                     <img src="./assets/coin.png" class="max-h-[35px]" alt="">
                 </div>
                 <div class="px-4 py-3 min-w-[110px] rounded-full bg-[#00A63E] flex justify-center items
-                    center text-white text-sm md:text-lg font-semibold">
+                    center text-white text-sm md:text-lg font-semibold border-none">
                     <h2 class="font-semibold text-white text-xl"><span id="copy-score-board">0</span> Copy</h2>
                 </div>
             </div>
@@ -51,8 +51,8 @@
         </div>
     </section>
     <!-- different service center -->
-    <div class=" bg-[#F5FFF6] max-w-[1800px] mx-auto py-12">
-        <div class="min-h-[1200px] grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 items-stretch">
+    <div class=" bg-[#F5FFF6] max-w-[1800px] mx-auto py-10">
+        <div class="min-h-[1200px] grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 items-stretch">
             <!-- জাতীয় জরুরি সেবা -->
             <div
                 class=" bg-white shadow-lg text-center p-6 rounded-xl h-full flex flex-col justify-between w-full max-w-md mx-auto">
@@ -60,7 +60,8 @@
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/emergency.png" class="max-h-[40px]"
                             alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i>
                     </div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">জাতীয় জরুরি সেবা</h2>
@@ -86,7 +87,8 @@
                 <div class="flex justify-between items-center">
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/police.png" class="max-h-[40px]" alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">পুলিশ</h2>
                 <p id="name-police" class="text-start text-xl">Police</p>
@@ -112,7 +114,8 @@
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/fire-service.png" class="max-h-[40px]"
                             alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">ফায়ার সার্ভিস</h2>
                 <p id="name-fire" class="text-start text-xl">Fire Service</p>
@@ -140,7 +143,7 @@
                         <h2 class="text-2xl font-semibold">Call History</h2>
                     </div>
                     <button id="clear-btn"
-                        class="w-[110px] h-[50px] md:w-[125px] md:h-[60px] rounded-full bg-[#00A63E] text-xl font-semibold text-white">
+                        class="w-[110px] h-[50px] md:w-[125px] md:h-[60px] rounded-full bg-[#00A63E] text-xl font-semibold text-white border-none">
                         Clear
                     </button>
                 </div>
@@ -153,7 +156,8 @@
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/ambulance.png" class="max-h-[40px]"
                             alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">অ্যাম্বুলেন্স</h2>
                 <p id="name-ambulance" class="text-start text-xl">Ambulance</p>
@@ -178,7 +182,8 @@
                 <div class="flex justify-between items-center">
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/images.png" class="max-h-[40px]" alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">নারী ও শিশু সহায়তা</h2>
                 <p id="name-women" class="text-start text-xl">Women & Child Helpline</p>
@@ -204,7 +209,8 @@
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/Anti-Corruption-Commission-Logo.png"
                             class="h-[40px] w-[40px]" alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">দুদক</h2>
                 <p id="name-anti" class="text-start text-xl">Anti-Corruption Commission</p>
@@ -230,7 +236,8 @@
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/BPDB_logo.png" class="max-h-[40px]"
                             alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">বিদ্যুৎ বিভ্রাট</h2>
                 <p id="name-ele" class="text-start text-xl">Electricity Outage</p>
@@ -255,7 +262,8 @@
                 <div class="flex justify-between items-center">
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/brac.png" class="max-h-[40px]" alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">ব্র্যাক</h2>
                 <p id="name-brac" class="text-start text-xl">BRAC</p>
@@ -281,7 +289,8 @@
                     <div class="bg-gray-100 p-2 rounded-xl"><img src="./assets/Bangladesh-Railway.png"
                             class="max-h-[40px]" alt="">
                     </div>
-                    <div class="img-heart"><i class="fa-regular fa-heart fa-2xl"></i></div>
+                    <div class="img-heart transition duration-200 ease-in-out hover:scale-115"><i
+                            class="fa-regular fa-heart fa-2xl"></i></div>
                 </div>
                 <h2 class="text-2xl font-bold text-start">বাংলাদেশ রেলওয়ে</h2>
                 <p id="name-rail" class="text-start text-xl">Bangladesh Railway</p>
